--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "gatsby-plugin-remove-trailing-slashes": "^3.14.0",
+    "gh-pages": "^4.0.0",
     "prettier": "2.2.1"
   }
 }
